--- a/portfoilio.html
+++ b/portfoilio.html
@@ -906,7 +906,7 @@ const portfolioContent = {
     { type: 'image', src: 'public/8.JPG' }
   ],
   album: [
-    { type: 'video', src: 'public/DA_1.mp4' },
+    { type: 'video', src: 'DA_1.mp4' },
     { type: 'video', src: 'public/DA_2.mp4' },
     { type: 'image', src: 'public/album1.webp' },
     { type: 'image', src: 'public/album2.webp' }
